Aggiunto tedesco a tendina lingue

--- a/src/QwebCMS/CatalogoBundle/Resources/views/Language/select_language.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Language/select_language.html.twig
@@ -2,5 +2,6 @@
     <select id="lng" name="lng">
         <option {% if id_lingua == '4' %} selected="selected" {% endif %} value="4">IT</option>
         <option {% if id_lingua == '1' %} selected="selected" {% endif %} value="1">EN</option>
+        <option {% if id_lingua == '2' %} selected="selected" {% endif %} value="2">DE</option>
     </select>
 </form>
