Inserito campo Offerta per Leotours

--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/updateproductinfo.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/updateproductinfo.html.twig
@@ -64,7 +64,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
-                                    <div class="col-lg-6">
+                                    <div class="col-lg-4">
                                         <div class="form-group">
                                             {{ form_label(form.pub, 'Pubblica'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
                                             {{ form_errors(form.pub) }}
@@ -73,12 +73,21 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-6">
+                                    <div class="col-lg-4">
                                         <div class="form-group">
                                             {{ form_label(form.featured, 'Visibile in Homepage'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
                                             {{ form_errors(form.featured) }}
                                             <div>
                                                 {{ form_widget(form.featured, { 'attr': {'class': 'js-switch'} }) }}
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <div class="form-group">
+                                            {{ form_label(form.offerta, 'In offerta'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
+                                            {{ form_errors(form.offerta) }}
+                                            <div>
+                                                {{ form_widget(form.offerta, { 'attr': {'class': 'js-switch'} }) }}
                                             </div>
                                         </div>
                                     </div>
