Agguinto campo venduto su prodotto, bugfix minori

--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/newproductinfo.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/newproductinfo.html.twig
@@ -61,7 +61,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-3">
                                         <div class="form-group">
                                             {{ form_label(form.pub, 'Pubblica'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
                                             {{ form_errors(form.pub) }}
@@ -70,7 +70,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-3">
                                         <div class="form-group">
                                             {{ form_label(form.featured, 'Visibile in Homepage'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
                                             {{ form_errors(form.featured) }}
@@ -79,12 +79,21 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-3">
                                         <div class="form-group">
                                             {{ form_label(form.offerta, 'In offerta'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
                                             {{ form_errors(form.offerta) }}
                                             <div>
                                                 {{ form_widget(form.offerta, { 'attr': {'class': 'js-switch'} }) }}
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="form-group">
+                                            {{ form_label(form.venduto, 'Venduto'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
+                                            {{ form_errors(form.venduto) }}
+                                            <div>
+                                                {{ form_widget(form.venduto, { 'attr': {'class': 'js-switch'} }) }}
                                             </div>
                                         </div>
                                     </div>
