--- a/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallfeatures.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallfeatures.html.twig
@@ -85,20 +85,22 @@
                                     </div>
                                 </li>
                                 {% for featuresvalue in feature.featurevalues %}
-                                <li class="col-md-12">
-                                    <div class="col-md-12">
-                                        <p class="col-md-1">></p>
-                                        <div class="btn-group col-md-4">
-                                            <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">{{ featuresvalue.title }}</a>
-                                            <ul class="dropdown-menu">
-                                                <li><a href="{{ path('update_featurevalues', {'id' : featuresvalue.idTblCatalogueFeaturevalue}) }}" title="Modifica" ><i class="fa fa-lg fa-edit"></i> Modifica</a></li>
-                                                <li><a href="{{ path('delete_featurevalues', {'id' : featuresvalue.idTblCatalogueFeaturevalue}) }}" title="Elimina" ><i class="fa fa-lg fa-times"></i> Elimina</a></li>
-                                                <li class="divider"></li>
-                                                <li><a href="{{ path('create_featurevalues') }}"><i class="fa fa-lg fa-plus"></i> Aggiungi Caratteristica</a></li>
-                                            </ul>
+                                    {% if lingua == featuresvalue.idTblLingua %}
+                                    <li class="col-md-12">
+                                        <div class="col-md-12">
+                                            <p class="col-md-1">></p>
+                                            <div class="btn-group col-md-4">
+                                                <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">{{ featuresvalue.title }}</a>
+                                                <ul class="dropdown-menu">
+                                                    <li><a href="{{ path('update_featurevalues', {'id' : featuresvalue.idTblCatalogueFeaturevalue}) }}" title="Modifica" ><i class="fa fa-lg fa-edit"></i> Modifica</a></li>
+                                                    <li><a href="{{ path('delete_featurevalues', {'id' : featuresvalue.idTblCatalogueFeaturevalue}) }}" title="Elimina" ><i class="fa fa-lg fa-times"></i> Elimina</a></li>
+                                                    <li class="divider"></li>
+                                                    <li><a href="{{ path('create_featurevalues') }}"><i class="fa fa-lg fa-plus"></i> Aggiungi Caratteristica</a></li>
+                                                </ul>
+                                            </div>
                                         </div>
-                                    </div>
-                                </li>
+                                    </li>
+                                    {% endif %}
                                 {% endfor %}
                             </ul>
                         </div>
