Corretta gestione area riservata

--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/newproductinfo.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/newproductinfo.html.twig
@@ -81,10 +81,10 @@
                                     </div>
                                     <div class="col-lg-3">
                                         <div class="form-group">
-                                            {{ form_label(form.visibilita, 'Visibilità'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
-                                            {{ form_errors(form.visibilita) }}
+                                            {{ form_label(form.areaRiservata, 'Area Riservata'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
+                                            {{ form_errors(form.areaRiservata) }}
                                             <div>
-                                                {{ form_widget(form.visibilita, { 'attr': {'class': 'js-switch'} }) }}
+                                                {{ form_widget(form.areaRiservata, { 'attr': {'class': 'js-switch'} }) }}
                                             </div>
                                         </div>
                                     </div>
