--- a/src/QwebCMS/CatalogoBundle/Resources/views/Category/new.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Category/new.html.twig
@@ -31,7 +31,7 @@
                 <a href="{{ path('products') }}">Prodotti <span class="fa arrow"></span></a>
                 <ul class="nav nav-third-level collapse">
                     {% for category in categories %}
-                        <li><a href="{{ path('show_category', {id : category.idTblCatalogueCategory}) }}">{{ category.title }}</a></li>
+                        <li><a href="{{ path('show_category', {id : category.id}) }}">{{ category.title }}</a></li>
                     {% endfor %}
                 </ul>
             </li>
@@ -56,7 +56,7 @@
 
                     <div id="tab-1" class="tab-pane active">
                         <div class="panel-body">
-                            <div class="col-md-6">
+                            <div class="col-md-6 col-lg-6">
                                 <div class="form-group">
                                     {{ form_label(form.title, 'Nome'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
                                     {{ form_errors(form.title) }}
@@ -77,14 +77,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-md-6 col-lg-6">
                                 <div class="form-group">
                                     {{ form_errors(form.categoriesParent) }}
                                     {{ form_label(form.categoriesParent, 'Categoria padre'|default(null) ,{'label_attr': {'class': ''}}) }}
                                     {{ form_widget(form.categoriesParent, {'attr': {'class': 'col-lg-12', 'multiple':'true'}}) }}
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-md-6 col-lg-6">
                                 <div class="form-group">
                                     {{ form_errors(form.features) }}
                                     {{ form_label(form.features, 'Caratteristiche dei Prodotti Associati '|default(null) ,{'label_attr': {'class': ''}}) }}
