--- a/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallcategory.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallcategory.html.twig
@@ -16,7 +16,7 @@
                 <a href="{{ path('products') }}">Prodotti <span class="fa arrow"></span></a>
                 <ul class="nav nav-third-level collapse">
                     {% for category in categories %}
-                        <li><a href="{{ path('show_category', {id : category.idTblCatalogueCategory}) }}">{{ category.title }}</a></li>
+                        <li><a href="{{ path('show_category', {id : category.id}) }}">{{ category.title }}</a></li>
                     {% endfor %}
                 </ul>
             </li>
@@ -54,14 +54,14 @@
         </div>
     </div>
     <div class="ibox-content">
-        {{ knp_pagination_filter(pagination, {'title': 'Nome Categoria', 'idTblCatalogueCategory':'Id'}) }}
+        {{ knp_pagination_filter(pagination, {'title': 'Nome Categoria', 'id':'Id'}) }}
         <div class="clearfix"></div>
         <div class="table-responsive">
             <table class="table table-striped table-bordered table-hover dataTables">
                 <thead>
                     <tr>
                         {# sorting of properties based on query components #}
-                        <th>{{ knp_pagination_sortable(pagination, 'Id', 'a.idTblCatalogueProduct') }}</th>
+                        <th>{{ knp_pagination_sortable(pagination, 'ID', 'a.id') }}</th>
                         <th{% if pagination.isSorted('a.Title') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Nome Prodotto', 'a.title') }}</th>
                         <th>{{ knp_pagination_sortable(pagination, 'Descrizione', 'a.description') }}</th>
                         <th>Azioni</th>
@@ -70,12 +70,20 @@
                 <tbody>
                 {% for category in pagination %}
                     <tr {% if loop.index is odd %}class="color"{% endif %}>
-                        <td>{{category.idTblCatalogueCategory}}</td>
+                        <td>{{category.id}}</td>
                         <td>{{category.title}}</td>
                         <td>{{category.description}}</td>
                         <td>
-                            <a href="{{ path('update_category', {'id' : category.idTblCatalogueCategory}) }}" title="Modifica" class="btn btn-warning btn-circle"><i class="fa fa-lg fa-edit"></i></a>
-                            <a href="{{ path('delete_category', {'id' : category.idTblCatalogueCategory}) }}" title="Elimina" class="btn btn-danger btn-circle"><i class="fa fa-lg fa-times"></i></a>
+                            <div class="btn-group">
+                                <a href="{{ path('update_category', {'id' : category.id}) }}" title="Modifica" class="btn btn-xs btn-warning"><i class="fa fa-lg fa-edit"></i> Modifica</a>
+                                <button type="button" class="btn btn-warning btn-xs dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <span class="caret"></span>
+                                    <span class="sr-only">Apri menù a discesa</span>
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li><a href="{{ path('delete_category', {'id' : category.id}) }}" title="Elimina" class=""><i class="fa fa-lg fa-times"></i> Elimina</a></li>
+                                </ul>
+                            </div>
                         </td>
                     </tr>
                 {% endfor %}
